examples/fake-service/api/init-consul-config/serviceaccount.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: api
spec:
  selector:
    app: api
  ports:
    - port: 9091
      targetPort: 9091
