examples/fake-service/api/init-consul-config/apigw-route-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-api
  namespace: api
spec:
  parentRefs:
  - name: api-gateway
    namespace: consul
  rules:
  - matches:
    - path:
        type: Exact
        value: /api
    filters:
      - type: ExtensionRef
        extensionRef:
          group: consul.hashicorp.com
          kind: RouteTimeoutFilter
          name: api-route-timeout-filter
    backendRefs:
    - kind: Service
      name: api
      namespace: api
      port: 9091
